WIP fixes from code review

--- a/docker_reverse_proxy/Dockerfile
+++ b/docker_reverse_proxy/Dockerfile
@@ -1,4 +1,4 @@
-FROM nginx
+FROM nginx:1.16-alpine
 
 # cleanup unused nginx config
 RUN rm /etc/nginx/conf.d/default.conf
@@ -9,6 +9,5 @@ COPY ./conf/nginx.conf /etc/nginx/nginx.conf
 
 # copy startup script
 COPY ./docker-entrypoint.sh /docker-entrypoint.sh
-RUN chmod +x /docker-entrypoint.sh
 
-ENTRYPOINT ["bin/bash", "/docker-entrypoint.sh"]
+ENTRYPOINT ["/bin/bash", "/docker-entrypoint.sh"]
