--- a/.envrc
+++ b/.envrc
@@ -74,7 +74,7 @@ done
 ### Python ###
 
 # direnv set -u's; unsure if it's a good idea to set +u.
-VIRTUAL_ENV="${VIRTUAL_ENV-}"
+VIRTUAL_ENV="${VIRTUAL_ENV:-}"
 
 if [ -n "$VIRTUAL_ENV" ]; then
     # we're enforcing that virtualenv be in .venv, since future tooling e.g. venv-update will rely on this.
@@ -120,7 +120,9 @@ rm -f .git/hooks/pre-commit.legacy
 
 ### devservices/database ###
 
-SENTRY_DIRENV_NO_CHECK_DEVSERVICES="${SENTRY_DIRENV_NO_CHECK_DEVSERVICES-}"
+# honestly, this could just be moved to the future "fixall" script
+
+SENTRY_DIRENV_NO_CHECK_DEVSERVICES="${SENTRY_DIRENV_NO_CHECK_DEVSERVICES:-}"
 if [ -z "${SENTRY_DIRENV_NO_CHECK_DEVSERVICES}" ]; then
     info "Checking for devservices containers, this might be a bit slow.
 To disable in the future, please set SENTRY_DIRENV_NO_CHECK_DEVSERVICES=1"
