comment env vars

--- a/.envrc
+++ b/.envrc
@@ -7,10 +7,6 @@
 #       - Although, this kind of state initialization could be moved to there from here in the future.
 #   - setting useful environment variables
 
-export PYTHONDONTWRITEBYTECODE=1
-export PIP_DISABLE_PIP_VERSION_CHECK=on
-export NODE_OPTIONS=--max-old-space-size=4096
-
 bold="$(tput bold)"
 red="$(tput setaf 1)"
 reset="$(tput sgr0)"
@@ -55,6 +51,17 @@ init_venv () {
 }
 
 set -e
+
+### Environment ###
+
+# don't write *.pyc files; using stale python code occasionally causes subtle problems
+export PYTHONDONTWRITEBYTECODE=1
+
+# don't check pypi for a potential new pip version; low-hanging fruit to save a bit of time
+export PIP_DISABLE_PIP_VERSION_CHECK=on
+
+# increase node's memory limit, required for our webpacking
+export NODE_OPTIONS=--max-old-space-size=4096
 
 ### System ###
 
