use command check for python2.7 here since we're just invoking it afterwards

--- a/.envrc
+++ b/.envrc
@@ -45,8 +45,7 @@ EOF
 
 init_venv () {
     deactivate 2>/dev/null || true
-    python2.7 -c "import sys; sys.exit(sys.version_info[:2] != (2, 7))" || \
-        die "You'll need to install python2.7. It's recommended to use pyenv."
+    require python2.7 || die "You'll need to install python2.7, or make it available on your PATH. It's recommended to use pyenv."
     python2.7 -m virtualenv .venv
 }
 
