add support for optional user-defined .envrc-overrides

--- a/.envrc
+++ b/.envrc
@@ -6,6 +6,8 @@
 #               and should be recommended by direnv as a catch-all fixer
 #       - Although, this kind of state initialization could be moved to there from here in the future.
 #   - setting useful environment variables
+#
+# If you'd like to override or do any custom things, this .envrc will source a .envrc-overrides file at the end.
 
 bold="$(tput bold)"
 red="$(tput setaf 1)"
@@ -159,3 +161,9 @@ if [ ! -x "node_modules/.bin/webpack" ]; then
 fi
 
 PATH_add node_modules/.bin
+
+### Overrides ###
+
+if [ -f .envrc-overrides ]; then
+    source .envrc-overrides
+fi
