[skip ci] vision change

--- a/.envrc
+++ b/.envrc
@@ -1,19 +1,14 @@
 # This is the .envrc for Sentry, for use with direnv.
-# We use it for:
-#   - lightweight (crucial since it's run on every cd to here) state checking and assurance (e.g. activating the venv)
-#   - one-time heavyweight state initialization (such as creating a .venv)
-#       - TODO: heavyweight state assurance, such as syncing venv, should happen in a one-off "fixall" script
-#               and should be recommended by direnv as a catch-all fixer
-#       - Although, this kind of state initialization could be moved to there from here in the future.
-#   - setting useful environment variables
-#
+# It's responsible for enforcing a standard dev environment by checking as much state as possible, and either performing
+# initialization (e.g. activating the venv) or giving recommendations on how to reach the desired state.
+# It also sets useful environment variables.
 # If you'd like to override or do any custom things, this .envrc will source a .envrc-overrides file at the end.
+
 
 bold="$(tput bold)"
 red="$(tput setaf 1)"
 reset="$(tput sgr0)"
 
-# NOTE: do not trap bash's EXIT; it will prevent direnv from performing its final dance(s)
 trap notice ERR
 
 notice () {
@@ -64,6 +59,7 @@ export PIP_DISABLE_PIP_VERSION_CHECK=on
 # increase node's memory limit, required for our webpacking
 export NODE_OPTIONS=--max-old-space-size=4096
 
+
 ### System ###
 
 for pkg in \
@@ -78,6 +74,7 @@ for pkg in \
 Please install homebrew, and run brew bundle."
     fi
 done
+
 
 ### Python ###
 
@@ -104,7 +101,6 @@ source .venv/bin/activate
 python -c "import sys; sys.exit(sys.version_info[:2] != (2, 7))" || \
     die "For some reason, the virtualenv isn't Python 2.7."
 
-# naive check, but we need to stay fast
 if [ "$(command -v sentry)" != "${PWD}/.venv/bin/sentry" ]; then
     info "Your .venv is activated, but sentry doesn't seem to be installed. Let's install it."
     make ensure-pinned-pip
@@ -112,6 +108,7 @@ if [ "$(command -v sentry)" != "${PWD}/.venv/bin/sentry" ]; then
     # which is reasonable if python2.7 is via pyenv. I forget if brew python@2 contains it.
     SENTRY_LIGHT_BUILD=1 make install-sentry-dev
 fi
+
 
 ### pre-commit ###
 
@@ -126,35 +123,32 @@ fi
 # this hotfix is cheap too, so just run it every time
 rm -f .git/hooks/pre-commit.legacy
 
-### devservices/database ###
 
-# honestly, this could just be moved to the future "fixall" script
+### devservices ###
 
-SENTRY_DIRENV_NO_CHECK_DEVSERVICES="${SENTRY_DIRENV_NO_CHECK_DEVSERVICES:-}"
-if [ -z "${SENTRY_DIRENV_NO_CHECK_DEVSERVICES}" ]; then
-    info "Checking for devservices containers, this might be a bit slow.
-To disable in the future, please set SENTRY_DIRENV_NO_CHECK_DEVSERVICES=1"
+# XXX: these container names are hardcoded for now
+# NOTE: sentry_symbolicator isn't started up by devservices, and is behind a config flag, so we're not checking for it
+for container in \
+    sentry_postgres     \
+    sentry_clickhouse   \
+    sentry_snuba        \
+    sentry_redis        ;
+    do
+    docker exec "$container" true || die "The docker container ${container} doesn't seem to be running.
+Please run sentry devservices up."
+done
 
-    # XXX: these container names are hardcoded for now
-    # NOTE: sentry_symbolicator isn't started up by devservices, and is behind a config flag, so we're not checking for it
-    for container in \
-        sentry_postgres     \
-        sentry_clickhouse   \
-        sentry_snuba        \
-        sentry_redis        ;
-        do
-        docker exec "$container" true || die "The docker container ${container} doesn't seem to be running.
-    Please run sentry devservices up."
-    done
-fi
+
+### database ###
 
 # TODO: is there a faster way to state-check the need for sentry reset-db and sentry createuser?
-# This is a little slower than i'd like, so not turning it on for now, not even behind a NO_CHECK flag.
-# docker exec sentry_postgres sh -c "psql -U postgres -h 127.0.0.1 sentry --command 'select * from sentry_useremail'"
+# docker exec sentry_postgres sh -c "psql -U postgres -h 127.0.0.1 sentry --command 'select 1 from sentry_useremail'"
+
 
 ### Node ###
 
-# naive check, but we need to stay fast
+# TODO: check the node version. Or, I could just build this into yarn.
+
 if [ ! -x "node_modules/.bin/webpack" ]; then
     info "You don't seem to have yarn packages installed. Let's install them."
     make install-yarn-pkgs
