fix: return instead of exit so that the notice shows up on die

--- a/.envrc
+++ b/.envrc
@@ -4,20 +4,27 @@
 # It also sets useful environment variables.
 # If you'd like to override or do any custom things, this .envrc will source a .envrc-overrides file at the end.
 
+set -e
 
 bold="$(tput bold)"
 red="$(tput setaf 1)"
 reset="$(tput sgr0)"
 
+# XXX: we can't trap bash EXIT, because it'll override direnv's finalizing routines.
+#      consequently, using "exit" anywhere will skip this notice from showing.
+#      so need to use set -e, and return 1.
 trap notice ERR
 
 notice () {
     [ $? -eq 0 ] && return
     cat <<EOF
-${bold}direnv tooling is in an ALPHA state!
+${bold}direnv wasn't able to complete execution.
+You may have been given some recommendations in the error message.
+Follow them, and then you'll need to re-run direnv with "direnv allow".${reset}
+
+direnv tooling is in an ALPHA state!
 If you're having trouble, or have questions, please ask in #discuss-dev-tooling
 and/or reach out to @josh.
-${reset}
 EOF
 }
 
@@ -37,7 +44,7 @@ die () {
 ${red}${bold}direnv FATAL: ${1}
 ${reset}
 EOF
-    exit 1
+    return 1
 }
 
 init_venv () {
@@ -45,8 +52,6 @@ init_venv () {
     require python2.7 || die "You'll need to install python2.7, or make it available on your PATH. It's recommended to use pyenv."
     python2.7 -m virtualenv .venv
 }
-
-set -e
 
 ### Environment ###
 
