more status feedback

--- a/.envrc
+++ b/.envrc
@@ -49,6 +49,7 @@ EOF
 
 init_venv () {
     deactivate 2>/dev/null || true
+    info "Creating a virtualenv for you."
     require python2.7 || die "You'll need to install python2.7, or make it available on your PATH. It's recommended to use pyenv."
     python2.7 -m virtualenv .venv
 }
@@ -83,7 +84,9 @@ done
 
 ### Python ###
 
-# direnv set -u's; unsure if it's a good idea to set +u.
+info "Checking virtualenv..."
+
+# direnv set -u's, so we need to do this.
 VIRTUAL_ENV="${VIRTUAL_ENV:-}"
 
 if [ -n "$VIRTUAL_ENV" ]; then
@@ -109,13 +112,13 @@ python -c "import sys; sys.exit(sys.version_info[:2] != (2, 7))" || \
 if [ "$(command -v sentry)" != "${PWD}/.venv/bin/sentry" ]; then
     info "Your .venv is activated, but sentry doesn't seem to be installed. Let's install it."
     make ensure-pinned-pip
-    # TODO: use venv-update to create venv. this assumes virtualenv is installed
-    # which is reasonable if python2.7 is via pyenv. I forget if brew python@2 contains it.
     SENTRY_LIGHT_BUILD=1 make install-sentry-dev
 fi
 
 
 ### pre-commit ###
+
+info "Checking pre-commit..."
 
 # this is cheap, so we'll just do it every time
 ln -sf config/hooks/* .git/hooks
@@ -130,6 +133,8 @@ rm -f .git/hooks/pre-commit.legacy
 
 
 ### devservices ###
+
+info "Checking devservices..."
 
 # XXX: these container names are hardcoded for now
 # NOTE: sentry_symbolicator isn't started up by devservices, and is behind a config flag, so we're not checking for it
@@ -154,12 +159,16 @@ done
 
 # TODO: check the node version. Or, I could just build this into yarn.
 
+info "Checking node..."
+
 if [ ! -x "node_modules/.bin/webpack" ]; then
     info "You don't seem to have yarn packages installed. Let's install them."
     make install-yarn-pkgs
 fi
 
 PATH_add node_modules/.bin
+
+# TODO: first-time webpacking
 
 ### Overrides ###
 
