--- a/.envrc
+++ b/.envrc
@@ -151,8 +151,13 @@ done
 
 ### database ###
 
-# TODO: is there a faster way to state-check the need for sentry reset-db and sentry createuser?
-# docker exec sentry_postgres sh -c "psql -U postgres -h 127.0.0.1 sentry --command 'select 1 from sentry_useremail'"
+info "Checking database..."
+
+if ! docker exec sentry_postgres sh \
+    -c "psql -U postgres -h 127.0.0.1 sentry --command 'select 1 from sentry_useremail'" >/dev/null;
+    then
+    die "It doesn't look like you have a database yet - you'll need to run 'make reset-db'."
+fi
 
 
 ### Node ###
