check the node version

--- a/.envrc
+++ b/.envrc
@@ -162,9 +162,22 @@ fi
 
 ### Node ###
 
-# TODO: check the node version. Or, I could just build this into yarn.
-
 info "Checking node..."
+
+node_version="10.16.3"
+
+# It would be nice to enforce that node is installed via volta (and is therefore a shim that will check against
+# the node pin in package.json), but for now, let's just explicitly check the node version.
+
+if ! require node; then
+    die "You don't seem to have node installed. We want version ${node_version}.
+It's recommended to use https://github.com/volta-cli/volta."
+fi
+
+if [ "$(node -v)" != "v${node_version}" ]; then
+    die "Your node version doesn't match ${node_version}.
+It's recommended to use https://github.com/volta-cli/volta."
+fi
 
 if [ ! -x "node_modules/.bin/webpack" ]; then
     info "You don't seem to have yarn packages installed. Let's install them."
