WIP fix configurations

--- a/reverse_proxy_config/nginx.conf
+++ b/reverse_proxy_config/nginx.conf
@@ -40,23 +40,21 @@ http {
         resolver 127.0.0.11 ipv6=off;
 
         location /api/store/ {
-            proxy_set_header X-MY-LOCATION old_store;
             proxy_pass http://relay;
         }
-        location ~ ^/api/\d+/store/${ESC} {
-            proxy_set_header X-MY-LOCATION store;
+        location ~ ^/api/\d+/store/$ {
             proxy_pass http://relay;
         }
-        location ~ ^/api/\d+/minidump/${ESC} {
+        location ~ ^/api/\d+/minidump/$ {
             proxy_pass http://relay;
         }
-        location ~ ^/api/\d+/ureal/${ESC} {
+        location ~ ^/api/\d+/ureal/$ {
             proxy_pass http://relay;
         }
-        location ~ ^/api/\d+/security/${ESC} {
+        location ~ ^/api/\d+/security/$ {
             proxy_pass http://relay;
         }
-        location ~ ^/api/\d+/csp-report/${ESC} {
+        location ~ ^/api/\d+/csp-report/$ {
             proxy_pass http://relay;
         }
 
