--- a/config/reverse_proxy/nginx.conf
+++ b/config/reverse_proxy/nginx.conf
@@ -48,7 +48,7 @@ http {
         location ~ ^/api/\d+/minidump/$ {
             proxy_pass http://relay;
         }
-        location ~ ^/api/\d+/ureal/$ {
+        location ~ ^/api/\d+/unreal/\w+/$ {
             proxy_pass http://relay;
         }
         location ~ ^/api/\d+/security/$ {
